add firebase script

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Guía Web de Firebase</title>
+
+  <!-- Firebase code -->
+  <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyB3yhqv4Y30cpBr41NfCD4hnFrotXbS5_Y",
+      authDomain: "fir-web-guide.firebaseapp.com",
+      databaseURL: "https://fir-web-guide.firebaseio.com",
+      projectId: "fir-web-guide",
+      storageBucket: "fir-web-guide.appspot.com",
+      messagingSenderId: "721044044043"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
